# University-Mevzuat-Model

./: README.md  pyproject.toml
DataModel/: QuestionGeneration.py
